# ga-rust-version-bumper

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  action.yml
.github/actions/bumper/: action.yml
.github/workflows/: test-bump.yml
examples/: Cargo.toml.example  commit-messages.md
src/: bump_logic.rs  commit_parser.rs  git_ops.rs  lib.rs  lockfile_ops.rs  main.rs  release_flow.rs  toml_ops.rs
tests/: integration_tests.rs
